--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-native": "0.75.3"
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-navigation/native": "^6.1.18",
+    "expo": "^51.0.34",
+    "firebase": "^10.13.2",
+    "react": "^18.3.1",
+    "react-native": "^0.75.3",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-reanimated": "^3.15.3",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,14 +31,14 @@
     "@react-native/eslint-config": "0.75.3",
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
-    "@types/react": "^18.2.6",
+    "@types/react": "~18.2.79",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "react-test-renderer": "^18.3.1",
+    "typescript": "~5.3.3"
   },
   "engines": {
     "node": ">=18"
